added restore member badge in comments

--- a/popup.html
+++ b/popup.html
@@ -5,13 +5,8 @@
     <link rel="stylesheet" type="text/css" href="popup.css" />
   </head>
   <body>
-    <h1>Hello, this is your extension! v0.6</h1>
-    <img
-      src="https://yt3.ggpht.com/hLHcCR6ZgeGGiWq7npYezynTzf6TqHxRBGHGHvk_n0zbSufNHhQmZnbm2E0KwZTjG7sAe7AlcA=s32-c-k"
-    />
-
-    <button id="stop">Stop replacing boxes</button>
-
+    <h1>FOREVER POMU! v0.8</h1>
+    pomu emotes and badges restorer (WIP)
     <script src="popup.js"></script>
     <script type="module" src="content.js"></script>
   </body>
