added randomizer choices

--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,33 @@
   <head>
     <title>My Extension Popup</title>
     <link rel="stylesheet" type="text/css" href="popup.css" />
+    <script src="popup.js"></script>
   </head>
   <body>
-    <h1>FOREVER POMU! v0.8</h1>
-    pomu emotes and badges restorer (WIP)
-    <script src="popup.js"></script>
-    <script type="module" src="content.js"></script>
+    <h1>FOREVER POMU! v0.9</h1>
+    <div>Live Chat Mood</div>
+    <div class="grid-container">
+      <!-- <table>
+      <tr> -->
+      <button class="grid-item" id="song-button">Song</button>
+      <button class="grid-item" id="scary-button">Scary</button>
+      <button class="grid-item" id="blush-button">Blush</button>
+      <!-- </tr>
+      <tr> -->
+      <button class="grid-item" id="sleepy-button">Sleepy</button>
+      <button class="grid-item" id="neutral-button">Neutral</button>
+      <button class="grid-item" id="angry-button">Angry</button>
+      <!-- </tr>
+      <tr> -->
+      <button class="grid-item" id="cry-button">Cry</button>
+      <button class="grid-item" id="cool-button">Cool</button>
+      <button class="grid-item" id="huh-button">Huh?</button>
+
+      <button class="grid-item" id="hotdog-button">Hotdog</button>
+      <button class="grid-item" id="choochoo-button">Choochoo</button>
+      <button class="grid-item" id="cat-button">Cat</button>
+      <!-- </tr>
+    </table> -->
+    </div>
   </body>
 </html>
